# simply-writer

./: README.md  index.html  pnpm-lock.yaml
backend/: Cargo.toml
backend/src/: index.html  main.rs
frontend-standalone/: pnpm-lock.yaml
frontend-web/: index.html  package.json  vite.config.ts
frontend-web/src/: App.vue
frontend/src/: style.css
src/: App.vue
