[package]
name = "simply-writer"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rfd = "0.17.2"
clap = { version = "4.5", features = ["derive"] }
press-btn-continue = "0.2.0"
encoding_rs = "0.8.35"
anyhow = "1.0.101"

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "simply-writer"
path = "src/main.rs"
